[project]
name = "loares"
version = "0.9b.1"
description = "Library for Optmisation Algorithm Research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pymoo>=0.6.1.6",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
